# Python-Hikari-SelfBot

./: .env.example  .gitignore  COMMAND.md  README.md  README.vi.md  README_PYTHON.md.txt  README_vi.md  SUMMARY.md.txt  pyproject.toml  run_bot.py  simple_test.py  test_imports.py  validate_token.py
src/: __init__.py  main.py
src/commands/: __init__.py  help_command.py  ping_command.py
src/config/: __init__.py  logging.py  settings.py
src/core/: __init__.py  base_command.py  event_loop.py  exceptions.py  interfaces.py  types.py
src/services/: __init__.py  bot_stats.py  command_registry.py  discord_service.py
src/utils/: __init__.py  __main__.py  formatters.py  validators.py
tests/: __init__.py  conftest.py
tests/unit/: test_commands.py
